--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -41,7 +42,8 @@
     "@babel/core": "^7.14.6",
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
-    "@babel/preset-react": "^7.14.5"
+    "@babel/preset-react": "^7.14.5",
+    "prop-types": "^15.7.2"
   },
   "babel": {
     "presets": [
